# miko

./: .gitignore  CLAUDE.md  PRIORITIES.md  index.md  log.md  migrate_to_db.py  miko.db  task.md
.obsidian/: graph.json  workspace.json
db/: system.sqlite
ops/: consolidate.md  index.md  ingest.md  lint.md  query.md  todo.md
raw/: logseq-journals  logseq-pages  obsidian-notes
scripts/: ingest.sh  run_op.sh
voice/: README.md  pyproject.toml
voice/src/voiceclone/: __init__.py  cli.py  config.py
voice/tests/: test_scaffold.py
wiki/concepts/: Citation-Pattern-Research-Discovery.md  Dual-Layer-Knowledge-System.md  Knowledge-Validation-Agent.md  account-consolidation.md  api-design-fundamentals.md  authentic-wants.md  claude-code-hooks.md  claude-projects.md  concept-artist-monitoring.md  concept-dial-up-mechanism.md  concept-film-discovery.md  concept-interest-tracker.md  concept-marketplace-level-models.md  concept-model-threshold-and-quality-control.md  concept-multi-model-ensemble-targeting.md  concept-schooling-timeline.md  concept-shadow-publishing-pipeline.md  context-aware-knowledge-organization.md  depression-and-ideation.md  diagram-generation-as-agent.md  domain-specific-parsing-agents.md  emotional-dysregulation.md  financial-reconciliation.md  fuzzy-cache.md  hyperfixation.md  interstitial-journaling.md  interview-coding-patterns.md  llm-on-consumer-hardware.md  llm-wiki-architecture.md  log-partitioning.md  logseq-slash-commands.md  markov-chains.md  matrix-protocol.md  modern-life-overhead.md  motivational-conflict.md  music-generation-python.md  (+21 more)
(+45 files in other folders)
