[project]
name = "voiceclone"
version = "0.1.0"
description = "Voice-clone learning project: per-source LoRA fine-tuning, RAG, LangGraph routing, DeepEval"
readme = "README.md"
authors = [
    { name = "Miko Agent", email = "filipe@miko.local" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "chromadb>=1.5.9",
    "deepeval>=4.1.1",
    "langgraph>=1.2.9",
    "openai>=2.46.0",
    "selectolax>=0.4.11",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "typer>=0.27.0",
]

[project.scripts]
voice = "voiceclone.cli:app"

[tool.uv]
# Intel Mac: force resolution to versions that ship x86_64 macOS wheels
# (recent onnxruntime/torch are arm64-only)
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
